fixed horizontal overflow

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -21,7 +21,8 @@ body {
   background-color: $dark-gray;
   background: url(../images/noisy.png);
   background-attachment: fixed;
-  text-align: center; 
+  text-align: center;
+  overflow-x: hidden; 
 }
 
 *:focus {
